# babybuddy

./: .buildpacks  .clever.json  .coveragerc  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .gitpod.yml  .prettierignore  .stylelintrc  .tool-versions  .travis.yml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  Procfile  Procfile.sh  README.md  SECURITY.md  app.json  boxfile.yml  captain-definition  db.sqlite3  devenv.nix  devenv.yaml  docker-compose-traefik.yml  docker-compose.example.mysql.yml  docker-compose.example.sqlite.yml  docker-compose.example.yml  docker-compose.yml  docker.env.example  entrypoint.sh  env.example  gulpfile.config.js  gulpfile.js  index.html  (+14 more)
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json
.do/: deploy.template.yaml
.ebextensions/: babybuddy.config
.github/: FUNDING.yml
.render.com/: build.sh
api/: filters.py  index.html  metadata.py  mixins.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
babyblotter/: settings.py  urls.py  wsgi.py
babybuddy/: __init__.py  admin.py  apps.py  config.py  fields.py  forms.py  middleware.py  mixins.py  models.py  plugins.py  site_settings.py  urls.py  views.py  widgets.py  wsgi.py  zeroconf.py
core/: admin.py  apps.py  context_processors.py  fields.py  filters.py  forms.py  mcp.py  models.py  timeline.py  urls.py  utils.py  views.py  widgets.py
css/: extras.css
dashboard/: urls.py  views.py
data/: .gitignore
docs/: API.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPORT_EXPORT.md  TOC.md  (+8 more)
(+917 files in other folders)
